# json5_parser

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Config.cmake.in  README.md  benchmark.bat  benchmark.sh  config.h.in  simd_double_parser3.inl
benchmark/: CMakeLists.txt  benchmark_parsr.cpp
data/: number.txt
data/jsonchecker/: fail13.json
include/json5_parser/: config.h  const_def.h  debug_handler.inl  debug_walker.inl  dom_handler.inl  dom_walker.inl  dummy_handler.inl  json5_parser.h  parser.hpp  parser.inl  rapid_dom_handler.inl  sax_handler.inl  walker.inl
include/json5_parser/xchar/: schar_def.h  uchar_def.h  xchar.h  xchar_undef.h
src/: dom_handler.hpp  dom_walker.hpp  fast_double_parser.h  json5_parser.cpp  json5_parser_common.hpp  parser.hpp  parser_impl.hpp  rapid_dom_handler.hpp  simd_double_parser.h  simd_double_parser.inl
test/: CMakeLists.txt  test_simd_parser.cpp  vistor.cpp  wvistor.cpp
tests/: test_simd_parser.cpp  vistor.cpp  wvistor.cpp
